# chain-node

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
scripts/: validate-core2-workaround.sh
specs/: orogen-forge.README.md
src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
